# fontpp

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: linux.yml  macos.yml
cmake/: LICENSE  README.md
cmake-modules/: FindFreetype.cmake
fontpp/: CMakeLists.txt  edtaa3func.cpp  edtaa3func.h  font.cpp  font.h  sdf.cpp  sdf.h  ucaps.h  utils.cpp  utils.h
fontpp/freetype/: freetype.cpp  freetype.h
fontpp/stb/: stb.cpp  stb.h  stb_truetype.h
tests/: BMP.h  CMakeLists.txt  main.cpp
